--- a/clash_config.yaml
+++ b/clash_config.yaml
@@ -77,6 +77,7 @@ rules:
   - DOMAIN-SUFFIX,nubia.cn,DIRECT
   - DOMAIN-SUFFIX,zte.com.cn,DIRECT
   - DOMAIN-SUFFIX,redmagic.com,DIRECT
+  - DOMAIN-SUFFIX,feishu.cn,DIRECT
   - DOMAIN-SUFFIX,cn,DIRECT
   - GEOSITE,cn,DIRECT
   - GEOIP,cn,DIRECT
