增加china的规则集

--- a/clash_config.yaml
+++ b/clash_config.yaml
@@ -59,6 +59,11 @@ rule-providers:
     behavior: classical
     url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Microsoft/Microsoft.yaml
     path: ./rulesets/microsoft.yaml
+  china:
+    type: http
+    behavior: classical
+    url: https://raw.githubusercontent.com/john-smith-matter/vpn_conf/refs/heads/main/china.yaml
+    path: ./rulesets/china.yaml
 
 rules:
   ## cloudflare-dns
@@ -79,11 +84,7 @@ rules:
   - DOMAIN-SUFFIX,ifconfig.me,specified
   
   ## 直连
-  - DOMAIN-SUFFIX,nubia.com,DIRECT
-  - DOMAIN-SUFFIX,nubia.cn,DIRECT
-  - DOMAIN-SUFFIX,zte.com.cn,DIRECT
-  - DOMAIN-SUFFIX,redmagic.com,DIRECT
-  - DOMAIN-SUFFIX,feishu.cn,DIRECT
+  - RULE-SET,china,DIRECT
   - DOMAIN-SUFFIX,cn,DIRECT
   - GEOSITE,cn,DIRECT
   - GEOIP,cn,DIRECT
