--- a/clash_config.yaml
+++ b/clash_config.yaml
@@ -19,6 +19,20 @@ dns:
   nameserver-policy:
     'rule-set:youtube_api':  https://1.1.1.1/dns-query#specified
 
+  enhanced-mode: fake-ip
+  fake-ip-filter:
+    - +.stun.*.*
+    - +.stun.*.*.*
+    - +.stun.*.*.*.*
+    - +.stun.*.*.*.*.*
+    - "*.n.n.srv.nintendo.net"
+    - +.stun.playstation.net
+    - xbox.*.*.microsoft.com
+    - "*.*.xboxlive.com"
+    - "*.msftncsi.com"
+    - "*.msftconnecttest.com"
+    - WORKGROUP
+
 proxies: []
 proxy-groups: []
 
