--- a/clash_config.yaml
+++ b/clash_config.yaml
@@ -6,7 +6,8 @@ dns:
   enable: true
   listen: 127.0.0.1:53
   ipv6: false
-  direct-nameserver: 8.8.8.8
+  direct-nameserver: 
+    - 8.8.8.8
   proxy-server-nameserver:
     - 8.8.8.8
   nameserver:
