--- a/china.yaml
+++ b/china.yaml
@@ -1,4 +1,5 @@
 payload:
+  - DOMAIN-SUFFIX,cn
   ## nubia
   - DOMAIN-SUFFIX,nubia.com
   - DOMAIN-SUFFIX,nubia.cn
@@ -20,5 +21,12 @@ payload:
   ## alibaba
   - DOMAIN-SUFFIX,alicdn.com
   - DOMAIN-SUFFIX,taobao.com
-  ## jd
+  ## 其他
   - DOMAIN-SUFFIX,jd.com
+  
+  - DOMAIN-SUFFIX,amap.com
+  - DOMAIN-SUFFIX,163.com
+  - DOMAIN-SUFFIX,cmbchina.com
+  - DOMAIN-SUFFIX,bdimg.com
+  
+  
