--- a/china.yaml
+++ b/china.yaml
@@ -1,38 +1,104 @@
 payload:
   - DOMAIN-SUFFIX,cn
   - GEOIP,cn
-  ## nubia
-  - DOMAIN-SUFFIX,nubia.com
-  - DOMAIN-SUFFIX,nubia.cn
-  - DOMAIN-SUFFIX,zte.com.cn
-  - DOMAIN-SUFFIX,redmagic.com
-  ## bytedance
-  - DOMAIN-KEYWORD,feishu
-  - DOMAIN-SUFFIX,coze.cn
-  - DOMAIN-KEYWORD,bytedance
-  - DOMAIN-SUFFIX,byteoversea.com
-  - DOMAIN-SUFFIX,larkoffice.com
-  - DOMAIN-SUFFIX,feishucdn.com
-  - DOMAIN-SUFFIX,ibytedapm.com
-  ## baidu
-  - DOMAIN-SUFFIX,baidu.com
-  ## tencent
-  - DOMAIN-SUFFIX,tencent.com
-  - DOMAIN-SUFFIX,qq.com
-  - DOMAIN-KEYWORD,wechat
-  - DOMAIN-SUFFIX,weixin.com
-  - DOMAIN-SUFFIX,tencent-cloud.net
-  - DOMAIN-SUFFIX,gtimg.com
-  - DOMAIN-SUFFIX,gtimg.cn
-  ## alibaba
-  - DOMAIN-SUFFIX,alicdn.com
-  - DOMAIN-SUFFIX,taobao.com
-  - DOMAIN-SUFFIX,aliyuncs.com
+
+  ## nubia - 努比亚手机
+  - DOMAIN-SUFFIX,nubia.com # 努比亚官网
+  - DOMAIN-SUFFIX,nubia.cn # 努比亚中国官网
+  - DOMAIN-SUFFIX,zte.com.cn # 中兴通讯（努比亚母公司）
+  - DOMAIN-SUFFIX,redmagic.com # 红魔游戏手机
+  
+  ## bytedance - 字节跳动
+  - DOMAIN-KEYWORD,feishu # 飞书协同办公
+  - DOMAIN-SUFFIX,coze.cn # Coze AI机器人平台
+  - DOMAIN-KEYWORD,bytedance # 字节跳动
+  - DOMAIN-SUFFIX,byteoversea.com # 字节跳动海外
+  - DOMAIN-SUFFIX,larkoffice.com # Lark飞书国际版
+  - DOMAIN-SUFFIX,feishucdn.com # 飞书CDN
+  - DOMAIN-SUFFIX,ibytedapm.com # 字节APM监控
+  
+  ## baidu - 百度
+  - DOMAIN-SUFFIX,baidu.com # 百度搜索
+  
+  ## tencent - 腾讯
+  - DOMAIN-SUFFIX,tencent.com # 腾讯官网
+  - DOMAIN-SUFFIX,qq.com # QQ
+  - DOMAIN-SUFFIX,qq.com.cn # QQ中国
+  - DOMAIN-KEYWORD,wechat # 微信
+  - DOMAIN-SUFFIX,weixin.com # 微信官网
+  - DOMAIN-SUFFIX,weixinbridge.com # 微信桥接
+  - DOMAIN-SUFFIX,wechat.com # 微信
+  - DOMAIN-SUFFIX,servicewechat.com # 微信小程序
+  - DOMAIN-SUFFIX,weiyun.com # 微云
+  - DOMAIN-SUFFIX,tencent-cloud.net # 腾讯云
+  - DOMAIN-SUFFIX,myqcloud.com # 腾讯云对象存储
+  - DOMAIN-SUFFIX,qcloud.com # 腾讯云
+  - DOMAIN-SUFFIX,gtimg.com # 腾讯图片CDN
+  - DOMAIN-SUFFIX,gtimg.cn # 腾讯图片CDN
+  - DOMAIN-SUFFIX,qpic.cn # QQ图片
+  - DOMAIN-SUFFIX,qlogo.cn # QQ头像
+  - DOMAIN-SUFFIX,tencent-cloud.com # 腾讯云
+  - DOMAIN-SUFFIX,myapp.com # 应用宝
+  - DOMAIN-SUFFIX,smtcdns.com # 腾讯智能媒体CDN
+  - DOMAIN-SUFFIX,smtcdns.net # 腾讯智能媒体CDN
+  - DOMAIN-SUFFIX,qzone.com # QQ空间
+  - DOMAIN-SUFFIX,qzonestyle.gtimg.cn # QQ空间样式
+  - DOMAIN-SUFFIX,qqmail.com # QQ邮箱
+  - DOMAIN-SUFFIX,wegame.com # WeGame游戏平台
+  - DOMAIN-SUFFIX,wegame.com.cn # WeGame游戏平台
+  - DOMAIN-SUFFIX,foxmail.com # Foxmail邮箱
+  - DOMAIN-SUFFIX,dnspod.cn # DNSPod
+  - DOMAIN-SUFFIX,dnspod.com # DNSPod
+  - DOMAIN-SUFFIX,tencentmusic.com # 腾讯音乐
+  - DOMAIN-SUFFIX,imqq.com # QQ即时通讯
+  
+  ## alibaba - 阿里巴巴
+  - DOMAIN-SUFFIX,alibaba.com # 阿里巴巴
+  - DOMAIN-SUFFIX,alibaba.com.cn # 阿里巴巴中国
+  - DOMAIN-SUFFIX,alicdn.com # 阿里CDN
+  - DOMAIN-SUFFIX,aliimg.com # 阿里图片
+  - DOMAIN-SUFFIX,taobao.com # 淘宝
+  - DOMAIN-SUFFIX,tbcache.com # 淘宝缓存
+  - DOMAIN-SUFFIX,tmall.com # 天猫
+  - DOMAIN-SUFFIX,tmall.hk # 天猫香港
+  - DOMAIN-SUFFIX,1688.com # 1688批发网
+  - DOMAIN-SUFFIX,aliyun.com # 阿里云
+  - DOMAIN-SUFFIX,aliyuncs.com # 阿里云服务
+  - DOMAIN-SUFFIX,aliapp.org # 阿里应用
+  - DOMAIN-SUFFIX,alibabacloud.com # 阿里云国际
+  - DOMAIN-SUFFIX,cmpassport.com # 中国移动认证
+  - DOMAIN-SUFFIX,alipay.com # 支付宝
+  - DOMAIN-SUFFIX,alipay.cn # 支付宝中国
+  - DOMAIN-SUFFIX,alipayobjects.com # 支付宝对象存储
+  - DOMAIN-SUFFIX,alipay-corp.com # 支付宝企业
+  - DOMAIN-SUFFIX,alipay-eco.com # 支付宝生态
+  - DOMAIN-SUFFIX,alipay-inc.com # 支付宝公司
+  - DOMAIN-SUFFIX,antfin.com # 蚂蚁金服
+  - DOMAIN-SUFFIX,antfinancial.com # 蚂蚁金融
+  - DOMAIN-SUFFIX,ant.design # Ant Design设计系统
+  - DOMAIN-SUFFIX,antgroup.com # 蚂蚁集团
+  - DOMAIN-SUFFIX,ele.me # 饿了么
+  - DOMAIN-SUFFIX,elemecdn.com # 饿了么CDN
+  - DOMAIN-SUFFIX,alikunlun.com # 阿里昆仑
+  - DOMAIN-SUFFIX,tanx.com # 淘宝广告
+  - DOMAIN-SUFFIX,mmstat.com # 阿里统计
+  - DOMAIN-SUFFIX,ucweb.com # UC浏览器
+  - DOMAIN-SUFFIX,uc.cn # UC中国
+  - DOMAIN-SUFFIX,sm.cn # 神马搜索
+  - DOMAIN-SUFFIX,youku.com # 优酷
+  - DOMAIN-SUFFIX,soku.com # 搜库
+  - DOMAIN-SUFFIX,cainiao.com # 菜鸟物流
+  - DOMAIN-SUFFIX,guoguo-app.com # 菜鸟裹裹
+  - DOMAIN-SUFFIX,etao.com # 一淘
+  - DOMAIN-SUFFIX,xiami.com # 虾米音乐
+  - DOMAIN-SUFFIX,xiami.net # 虾米音乐
+  - DOMAIN-SUFFIX,alidayu.com # 阿里大鱼
+
   ## 其他
-  - DOMAIN-SUFFIX,jd.com
-  - DOMAIN-SUFFIX,amap.com
-  - DOMAIN-SUFFIX,163.com
-  - DOMAIN-SUFFIX,cmbchina.com
-  - DOMAIN-SUFFIX,bdimg.com
-  - DOMAIN-SUFFIX,tianyancha.com
-  - DOMAIN-SUFFIX,10086.cn
+  - DOMAIN-SUFFIX,jd.com # 京东商城
+  - DOMAIN-SUFFIX,amap.com # 高德地图
+  - DOMAIN-SUFFIX,163.com # 网易
+  - DOMAIN-SUFFIX,cmbchina.com # 招商银行
+  - DOMAIN-SUFFIX,bdimg.com # 百度图片CDN
+  - DOMAIN-SUFFIX,tianyancha.com # 天眼查企业信息查询
+  - DOMAIN-SUFFIX,10086.cn # 中国移动
