更新direct DNS服务器

--- a/clash_config.yaml
+++ b/clash_config.yaml
@@ -7,7 +7,7 @@ dns:
   listen: 127.0.0.1:53
   ipv6: false
   direct-nameserver: 
-    - 8.8.8.8
+    - system
   proxy-server-nameserver:
     - 8.8.8.8
   nameserver:
